# mind

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
schema/: mind.concept.schema  nexus.schema  sema.schema  signal.schema
scripts/: mind-cli-accepts-one-nota-record-and-prints-one-nota-reply  mind-cli-opens-and-queries-work-item-through-daemon  mind-cli-sends-signal-frames-to-long-lived-daemon  mind-meta-cli-reaches-owner-policy-socket  mind-store-survives-process-restart
src/: command.rs  configuration.rs  daemon.rs  daemon_main.rs  envelope.rs  error.rs  frame_bytes.rs  graph.rs  knowledge.rs  lib.rs  main.rs  memory.rs  meta.rs  supervision.rs  tables.rs  technical_seed.rs  text.rs  transport.rs
src/actors/: choreography.rs  dispatch.rs  domain.rs  manifest.rs  mod.rs  pipeline.rs  reply.rs  root.rs  subscription.rs  trace.rs  view.rs
src/actors/store/: graph.rs  kernel.rs  mod.rs  persistence.rs  write_trace.rs
src/schema/: nexus.rs  sema.rs  signal.rs
tests/: actor_topology.rs  cli.rs  daemon_wire.rs  memory.rs  orchestrate_caller.rs  weird_actor_truth.rs
