[package]
name         = "mind"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/mind"
description  = "Typed mind state for Persona agents."
publish      = false

[lib]
name = "mind"
path = "src/lib.rs"

[[bin]]
name = "mind"
path = "src/main.rs"

[dependencies]
kameo               = { git = "https://github.com/LiGoldragon/kameo", branch = "persona-lifecycle-terminal-outcome", default-features = false, features = ["macros", "tracing"] }
nota-next           = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
meta-signal-orchestrate = { git = "https://github.com/LiGoldragon/meta-signal-orchestrate.git", branch = "main" }
rkyv                = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine         = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame        = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-engine-management = { git = "https://github.com/LiGoldragon/signal-engine-management.git", branch = "main" }
signal-mind         = { git = "https://github.com/LiGoldragon/signal-mind.git", branch = "main" }
thiserror           = "2"
tokio               = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
