[package]
name         = "mind"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/mind"
description  = "Typed mind state for Persona agents."
publish      = false
build        = "build.rs"

[lib]
name = "mind"
path = "src/lib.rs"

[[bin]]
name = "mind"
path = "src/main.rs"
required-features = ["nota-text"]

[[bin]]
name = "mind-daemon"
path = "src/daemon_main.rs"

[[bin]]
name = "meta-mind"
path = "src/bin/meta-mind.rs"
required-features = ["nota-text"]

[[bin]]
name = "mind-write-configuration"
path = "src/bin/mind_write_configuration.rs"
required-features = ["nota-text"]

[features]
default   = ["nota-text"]
nota-text = ["meta-signal-mind/nota-text"]

[dependencies]
kameo               = { version = "0.20", default-features = false, features = ["macros", "tracing"] }
nota-next           = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
meta-signal-mind    = { git = "https://github.com/LiGoldragon/meta-signal-mind.git", branch = "main", default-features = false }
meta-signal-orchestrate = { git = "https://github.com/LiGoldragon/meta-signal-orchestrate.git", branch = "main" }
rkyv                = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine         = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame        = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona      = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
signal-mind         = { git = "https://github.com/LiGoldragon/signal-mind.git", branch = "main" }
triad-runtime       = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }
thiserror           = "2"
tokio               = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
