[package]
name         = "mind"
version      = "0.5.1"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/mind"
description  = "Typed mind state for Persona agents."
publish      = false
build        = "build.rs"

[lib]
name = "mind"
path = "src/lib.rs"

[[bin]]
name = "mind"
path = "src/main.rs"
required-features = ["nota-text"]

[[bin]]
name = "mind-daemon"
path = "src/daemon_main.rs"

[[bin]]
name = "meta-mind"
path = "src/bin/meta-mind.rs"
required-features = ["nota-text"]

[[bin]]
name = "mind-write-configuration"
path = "src/bin/mind_write_configuration.rs"
required-features = ["nota-text"]

[features]
default   = ["nota-text"]
nota-text = ["meta-signal-mind/nota-text"]

[dependencies]
kameo               = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false, features = ["macros", "tracing"] }
nota-next           = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
meta-signal-mind    = { git = "https://github.com/LiGoldragon/meta-signal-mind.git", rev = "0ac8f093190ff2660747ded706dc73b56b3c44fa", default-features = false }
meta-signal-orchestrate = { git = "ssh://git@github.com/LiGoldragon/meta-signal-orchestrate.git", rev = "a2594ed875b4631fab13ecd652aaf4b52d7b6aef" }
rkyv                = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
redb                = "4.1"
sema-engine         = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame        = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona      = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
signal-mind         = { git = "https://github.com/LiGoldragon/signal-mind.git", branch = "main" }
triad-runtime       = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }
thiserror           = "2"
tokio               = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[build-dependencies]
schema-rust-next = { git = "ssh://git@github.com/LiGoldragon/schema-rust-next.git", rev = "bb4dfe293e03e64e89f899621cc5dfa5bff6958e" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }

[patch."https://github.com/LiGoldragon/nota-next.git"]
nota-next = { git = "ssh://git@github.com/LiGoldragon/nota-next.git", rev = "7105c2be36067cb3d5b8f744aaf628ffdac7a112" }

[patch."https://github.com/LiGoldragon/schema-rust-next.git"]
schema-rust-next = { git = "ssh://git@github.com/LiGoldragon/schema-rust-next.git", rev = "bb4dfe293e03e64e89f899621cc5dfa5bff6958e" }

[patch."https://github.com/LiGoldragon/schema-next.git"]
schema-next = { git = "ssh://git@github.com/LiGoldragon/schema-next.git", rev = "b3be7d0f9161cc01353cfecd0cc0a17678b5030a" }

[patch."https://github.com/LiGoldragon/signal-orchestrate.git"]
signal-orchestrate = { git = "ssh://git@github.com/LiGoldragon/signal-orchestrate.git", rev = "93a05d6effdeb74e3e6726feff6a7fbb092501aa" }
